--- a/package.json
+++ b/package.json
@@ -11,17 +11,11 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.16.2",
-    "expect": "^1.14.0",
     "express": "^4.13.4",
-    "karma": "^0.13.22",
-    "karma-chrome-launcher": "^0.2.2",
-    "karma-mocha": "^0.2.2",
-    "karma-mocha-reporter": "^2.0.0",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^1.7.0",
-    "mocha": "^2.4.5",
+    "karma-firefox-launcher": "^1.0.1",
     "node-sass": "^4.5.3",
     "react": "^0.14.7",
+    "react-addons-test-utils": "0.14.7",
     "react-dom": "^0.14.7",
     "react-router": "^2.0.0",
     "sass-loader": "^6.0.6"
@@ -33,8 +27,16 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "css-loader": "^0.23.1",
+    "expect": "^1.14.0",
     "foundation-sites": "^6.2.0",
     "jquery": "^2.2.1",
+    "karma": "^0.13.22",
+    "karma-chrome-launcher": "^0.2.2",
+    "karma-mocha": "^0.2.2",
+    "karma-mocha-reporter": "^2.0.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^1.7.0",
+    "mocha": "^2.4.5",
     "script-loader": "^0.6.1",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.13"
